--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 </head>
 <body>
     <div class = "container">
-        <p>Welcome to our test</p>
+        <p>Hello! Thank you for being a part of our ongoing study with Headspace.We are a group of CMU students from the School of Computer Science  working on a study to try to understand what effects sound has during meditation. Please enter the code you were provided via email to begin.</p>
 
         Code: <input id="password" type="text"/>
         <button><a href="test.html" onclick="javascript:return validatePass()">Submit</a></button>
 
         <script>
         function validatePass(){
-            if(document.getElementById("password").value == 'Tester1'){
+            if(document.getElementById("password").value == 'Test'){
                 return true;
             } else{
                 alert('Incorrect Code');
