--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@ Please make sure you answer the questions immediately at the end of the session 
         Your browser does not support the audio element.
         </audio>
         <br><br>
-        <button><a href="https://goo.gl/forms/foVfipczlpLrgRp32" onclick="javascript:return checkAudio()">Review Experience</a></button>
+        <a href="https://goo.gl/forms/foVfipczlpLrgRp32" onclick="javascript:return checkAudio()"><button>Review Experience</button></a>
     </div>
 
     <script>
