--- a/session2instructions.html
+++ b/session2instructions.html
@@ -19,7 +19,7 @@ Note: Please make sure you answer the questions immediately at the end of the se
 <br><br>
 Thank you for your help!</p>
 <br>
-<a href = "session2.html"><button>PROCEED TO STUDY</button></a>
+<a href = "session2choose.html"><button>PROCEED TO STUDY</button></a>
 
     </div>
 </body>
