--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <title>Meditation Demo</title>
     <link rel="stylesheet" href="index.css">
 </head>
