--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         </div>
         <script>
         function validatePass(){
-            if(document.getElementById("password").value == 'SoundFirst'){
+            if(document.getElementById("password").value == 'meditate74'){ //soundfirst
                 window.location.href = "session1-s.html";
                 return true;
-            } else if(document.getElementById("password").value == 'NoSoundFirst'){
+            } else if(document.getElementById("password").value == 'relax90'){ //no sound first
                 window.location.href = "session1-ns.html";
                 return true;
-            } else if(document.getElementById("password").value == 'SoundSecond'){
+            } else if(document.getElementById("password").value == 'peaceful27'){ // sound second
                 window.location.href = "session2-s.html";
                 return true;
-            } else if(document.getElementById("password").value == 'NoSoundSecond'){
+            } else if(document.getElementById("password").value == 'calm15'){ //no sound second
                 window.location.href = "session2-ns.html";
                 return true;
             } else {
