--- a/session1-s-play.html
+++ b/session1-s-play.html
@@ -13,7 +13,7 @@
 
         <audio id= "audio">
             <!-- CHANGE HERE FOR SESSIONS -->
-          <source src="no-sound.mp3" type="audio/mpeg">
+          <source src="sound.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
         </audio>
         <br>
